--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
       <li>
         <a href="TASK2/index.html">TASK2</a>
       </li>
+      <li>
+        <a href="TASK3/index.html">TASK3</a>
+      </li>
+    
   </body>
 </html>
