--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <li>
         <a href="TASK3/index.html">TASK3</a>
       </li>
+      <li>
+        <a href="TASK7/index.html">TASK7</a>
+      </li>
     
   </body>
 </html>
