--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <a href="TASK3/index.html">TASK3</a>
       </li>
       <li>
+        <a href="TASK6/index.html">TASK6</a>
+      </li>
+      <li>
         <a href="TASK7/index.html">TASK7</a>
       </li>
     
