--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
       <li>
         <a href="TASK7/index.html">TASK7</a>
       </li>
-    
+      <li>
+        <a href="TASK8/index.html">TASK8</a>
+      </li>
+      <li>
+        <a href="TASK9/index.html">TASK9</a>
+      </li>
+      <li>
+        <a href="TASK10/index.html">TASK10</a>
+      </li>
+      <li>
+        <a href="TASK11/index.html">TASK11</a>
+      </li>
+    </ul>
   </body>
 </html>
