--- a/TASK9/index.html
+++ b/TASK9/index.html
@@ -9,6 +9,8 @@
     <h1>Task 09: Viết hàm thực hiện hoán vị 2 số không dùng biến trung gian</h1>
   </body>
   <script>
+    let a = parseFloat(prompt("Nhập số a:"));
+    let b = parseFloat(prompt("Nhập số b:"));
     function swapNumber(a, b) {
       console.log(`Trước : a = ${a}, b = ${b}`);
       a = a + b;
@@ -16,6 +18,6 @@
       a = a - b;
       console.log(`Sau: a = ${a}, b = ${b}`);
     }
-    swapNumber(5, 10);
+    swapNumber(a, b);
   </script>
 </html>
