--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       <li>
         <a href="TASK11/index.html">TASK11</a>
       </li>
+      <li>
+        <a href="TASK12/index.html">TASK12</a>
+      </li>
     </ul>
   </body>
 </html>
