--- a/TASK17/index.html
+++ b/TASK17/index.html
@@ -8,7 +8,35 @@
 </head>
 
 <body>
+    <h1>Task 17: Tính tiền thuế</h1>
+    <p id="result"></p>
 
 </body>
+<script>
+    // Input:
+    let salary = prompt("Nhập số tiền lương: ");
+    function taxSalary(salary) {
+        // Xử lý và in ra kết quả
+        if (salary <= 0) {
+            document.getElementById("result").innerText = "Thu nhập không hợp lệ";
+        } else if (salary <= 11000000) {
+            document.getElementById("result").innerText = "Thuế: 0đ";
+        } else if (salary > 11000000 && salary <= 25000000) {
+            document.getElementById("result").innerText = "Thuế: " + 0.05 * salary + "đ";
+        } else if (salary > 25000000 && salary <= 50000000) {
+            document.getElementById("result").innerText = "Thuế: " + 0.1 * salary + "đ";
+        } else if (salary > 50000000 && salary <= 80000000) {
+            document.getElementById("result").innerText = "Thuế: " + 0.2 * salary + "đ";
+        } else if (salary > 80000000) {
+            document.getElementById("result").innerText = "Thuế: " + 0.3 * salary + "đ";
+        } else {
+            document.getElementById("result").innerText = "Thu nhập không hợp lệ";
+        }
+    }
+    // Output:
+    taxSalary(salary); 10000
+
+
+</script>
 
 </html>
