--- a/TASK17/index.html
+++ b/TASK17/index.html
@@ -4,39 +4,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tính tiền thuế</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+
+        table {
+            margin-top: 20px;
+            border-collapse: collapse;
+            width: 300px;
+        }
+
+        th,
+        td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 
 <body>
     <h1>Task 17: Tính tiền thuế</h1>
+    <table>
+        <tr>
+            <th>Nhập thu nhập (VND)</th>
+            <td><input type="number" id="salaryInput" placeholder="Nhập thu nhập"></td>
+        </tr>
+        <tr>
+            <td colspan="2"><button onclick="calculateTax()">Check</button></td>
+        </tr>
+    </table>
     <p id="result"></p>
 
-</body>
-<script>
-    // Input:
-    let salary = prompt("Nhập số tiền lương: ");
-    function taxSalary(salary) {
-        // Xử lý và in ra kết quả
-        if (salary <= 0) {
-            document.getElementById("result").innerText = "Thu nhập không hợp lệ";
-        } else if (salary <= 11000000) {
-            document.getElementById("result").innerText = "Thuế: 0đ";
-        } else if (salary > 11000000 && salary <= 25000000) {
-            document.getElementById("result").innerText = "Thuế: " + 0.05 * salary + "đ";
-        } else if (salary > 25000000 && salary <= 50000000) {
-            document.getElementById("result").innerText = "Thuế: " + 0.1 * salary + "đ";
-        } else if (salary > 50000000 && salary <= 80000000) {
-            document.getElementById("result").innerText = "Thuế: " + 0.2 * salary + "đ";
-        } else if (salary > 80000000) {
-            document.getElementById("result").innerText = "Thuế: " + 0.3 * salary + "đ";
-        } else {
-            document.getElementById("result").innerText = "Thu nhập không hợp lệ";
+    <script>
+        function taxSalary(salary) {
+            // Kiểm tra xem salary có phải là số và lớn hơn hoặc bằng 0 không
+            if (isNaN(salary) || salary < 0) {
+                return "Thu nhập không hợp lệ";
+            }
+
+            let tax = 0;
+
+            // Tính thuế theo từng mức thu nhập
+            if (salary > 80000000) {
+                tax += (salary - 80000000) * 0.3; // 30% cho phần trên 80 triệu
+                salary = 80000000;
+            }
+            if (salary > 50000000) {
+                tax += (salary - 50000000) * 0.2; // 20% cho phần từ 50 triệu đến 80 triệu
+                salary = 50000000;
+            }
+            if (salary > 25000000) {
+                tax += (salary - 25000000) * 0.1; // 10% cho phần từ 25 triệu đến 50 triệu
+                salary = 25000000;
+            }
+            if (salary > 11000000) {
+                tax += (salary - 11000000) * 0.05; // 5% cho phần từ 11 triệu đến 25 triệu
+            }
+
+            // In ra kết quả thuế
+            return tax.toLocaleString('vi-VN', { style: 'currency', currency: 'VND' });
         }
-    }
-    // Output:
-    taxSalary(salary); 10000
 
-
-</script>
+        function calculateTax() {
+            const salary = parseFloat(document.getElementById("salaryInput").value);
+            const result = taxSalary(salary);
+            document.getElementById("result").innerText = `Thuế phải nộp: ${result}`;
+        }
+    </script>
+</body>
 
 </html>
