--- a/index.html
+++ b/index.html
@@ -61,6 +61,36 @@
     <li>
       <a href="TASK19/index.html">TASK19</a>
     </li>
+    <li>
+      <a href="TASK20/index.html">TASK20</a>
+    </li>
+    <li>
+      <a href="TASK21/index.html">TASK21</a>
+    </li>
+    <li>
+      <a href="TASK22/index.html">TASK22</a>
+    </li>
+    <li>
+      <a href="TASK23/index.html">TASK23</a>
+    </li>
+    <li>
+      <a href="TASK24/index.html">TASK24</a>
+    </li>
+    <li>
+      <a href="TASK25/index.html">TASK25</a>
+    </li>
+    <li>
+      <a href="TASK26/index.html">TASK26</a>
+    </li>
+    <li>
+      <a href="TASK27/index.html">TASK27</a>
+    </li>
+    <li>
+      <a href="TASK28/index.html">TASK28</a>
+    </li>
+    <li>
+      <a href="TASK29/index.html">TASK29</a>
+    </li>
 
 
   </ul>
