--- a/TASK21/index.html
+++ b/TASK21/index.html
@@ -123,7 +123,18 @@
             return arr; // Nếu không, trả về mảng ban đầu
         }
         arr.push(num); // Thêm số num vào mảng
-        arr.sort((a, b) => a - b); // Sắp xếp mảng theo thứ tự tăng dần
+
+        for (let i = 0; i < arr.length - 1; i++) {
+            for (let j = 0; j < arr.length - i - 1; j++) {
+                if (arr[j] > arr[j + 1]) {
+                    // Hoán đổi vị trí của hai phần tử
+                    let temp = arr[j];
+                    arr[j] = arr[j + 1];
+                    arr[j + 1] = temp;
+                }
+            }
+        }
+
         return arr; // Trả về mảng đã được chèn và sắp xếp
 
 
