--- a/TASK22/index.html
+++ b/TASK22/index.html
@@ -8,7 +8,25 @@
 </head>
 
 <body>
+    <script>
+        const arrayNumber = [1, 2, 3, 4, 3, 2, 1];
+        function checkSymmetricalArr(arr) {
+            // Xử lý logic
 
+            const length = arr.length;
+            for (let i = 0; i < length / 2; i++) {
+                if (arr[i] !== arr[length - 1 - i]) {
+                    return false;
+                }
+            }
+            return true;
+
+
+
+        }
+        const result = checkSymmetricalArr(arrayNumber);
+        console.log(result); //true
+    </script>
 </body>
 
 </html>
