--- a/TASK26/index.html
+++ b/TASK26/index.html
@@ -8,7 +8,31 @@
 </head>
 
 <body>
-
+    <h1>Task26</h1>
 </body>
+<script>
+    const fruits = [
+        "apple",
+        "banana",
+        "kiwi",
+        "kiwi",
+        "banana",
+        "orange",
+        "apple",
+        "kiwi",
+    ];
+
+    function countElement(arr) {
+        return arr.reduce((acc, curr) => {
+            acc[curr] = (acc[curr] || 0) + 1;
+            return acc;
+        }, {});
+    }
+
+
+    const result = countElement(fruits);
+
+    console.log(result); // { apple: 2, banana: 2, kiwi: 3, orange: 1 }
+</script>
 
 </html>
