--- a/TASK24/index.html
+++ b/TASK24/index.html
@@ -8,7 +8,32 @@
 </head>
 
 <body>
+    <h1>task24</h1>
+    <script>
+        const number = [4, 2, 7, 6, 5, 8, 2, 1];
 
+        function sortArrNumber(arr) {
+            let n = arr.length;
+
+            // Bubble Sort
+            for (let i = 0; i < n - 1; i++) {
+                for (let j = 0; j < n - 1 - i; j++) {
+                    if (arr[j] > arr[j + 1]) {
+                        // Hoán đổi phần tử
+                        let temp = arr[j];
+                        arr[j] = arr[j + 1];
+                        arr[j + 1] = temp;
+                    }
+                }
+            }
+
+            return arr;
+        }
+
+        const result = sortArrNumber(number);
+        console.log(result); // [1, 2, 2, 4, 5, 6, 7, 8]
+
+    </script>
 </body>
 
 </html>
