--- a/index.html
+++ b/index.html
@@ -91,6 +91,18 @@
     <li>
       <a href="TASK29/index.html">TASK29</a>
     </li>
+    <li>
+      <a href="TASK30/index.html">TASK30</a>
+    </li>
+    <li>
+      <a href="TASK31/index.html">TASK31</a>
+    </li>
+    <li>
+      <a href="TASK32/index.html">TASK32</a>
+    </li>
+    <li>
+      <a href="TASK33/index.html">TASK33</a>
+    </li>
 
 
   </ul>
