--- a/index.html
+++ b/index.html
@@ -103,6 +103,18 @@
     <li>
       <a href="TASK33/index.html">TASK33</a>
     </li>
+    <li>
+      <a href="TASK34/index.html">TASK34</a>
+    </li>
+    <li>
+      <a href="TASK35/index.html">TASK35</a>
+    </li>
+    <li>
+      <a href="TASK36/index.html">TASK36</a>
+    </li>
+    <li>
+      <a href="TASK37/index.html">TASK37</a>
+    </li>
 
 
   </ul>
