--- a/index.html
+++ b/index.html
@@ -115,6 +115,15 @@
     <li>
       <a href="TASK37/index.html">TASK37</a>
     </li>
+    <li>
+      <a href="TASK38/index.html">TASK38</a>
+    </li>
+    <li>
+      <a href="TASK39/index.html">TASK39</a>
+    </li>
+    <li>
+      <a href="TASK40/index.html">TASK40</a>
+    </li>
 
 
   </ul>
