--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@
     <li>
       <a href="TASK40/index.html">TASK40</a>
     </li>
+    <li>
+      <a href="TASK41/index.html">TASK41</a>
+    </li>
+    <li>
+      <a href="TASK42/index.html">TASK42</a>
+    </li>
 
 
   </ul>
