--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
     <li>
       <a href="TASK42/index.html">TASK42</a>
     </li>
+    <li>
+      <a href="TASK43/index.html">TASK43</a>
+    </li>
 
 
   </ul>
